<resources>
    <string name="app_name">Aluradmi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="urut_alur">Urut Alur</string>
    <string name="sebelumnya">Sebelumnya</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="nama_alur">Nama Alur</string>
    <string name="nama_kategori">Nama Kategori</string>
    <string name="item_lokasi_keterangan">Lokasi : </string>
    <string name="item_berkas_keterangan">Berkas : </string>
    <string name="action_pilih_jurusan">Ganti Jurusan</string>
    <string name="kategori">Daftar Administrasi</string>
    <string name="lokasi">Peta</string>
    <string name="about">Tentang</string>
    <string name="bantuan">Bantuan</string>
    <string name="alur">Alur</string>
    <string name="selesai">Selesai</string>
    <string name="keterangan">Keterangan</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_show_route">Tunjukkan Rute</string>
    <string name="hint_lokasi" >Cari Lokasi</string>
    <string name="detail">Detail</string>
    <string name="copyright">Copyright &#169; 2017. Aluradmi , @banukusuma11</string>
    <string name="home">Beranda</string>
    <string name="info">Info</string>
    <string name="jurusan">Jurusan :</string>
    <string name="welcome">Selamat Datang di Aluradmi</string>
    <string name="oke">Oke</string>
    <string name="cancel">Cancel</string>
    <string name="tunjuk_rute">Tunjukkan Rute</string>
    <string name="gedung">Gedung : </string>
    <string name="logo">logo</string>
    <string name="lantai">Lantai </string>
    <string name="ruang">Ruang </string>
    <string name="unduh_denah">Sedang Mengunduh Denah</string>
    <string name="unduh_data_awal">Sedang Mengunduh Data</string>
    <string name="search_hint">Nama Alur....</string>
    <string name="search">Cari Langkah</string>
    <string name="sync">Sinkronisasi Data</string>
    <string name="coba">Coba Lagi</string>
    <string name="gagal_mengunduh">Gagal Mengunduh Data</string>
    <string name="data_kosong">Data Masih Kosong</string>
    <string name="data_tidak_cocok">Tidak Ada Langkah yang Cocok</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="penjelasan_aluradmi">Aluradmi adalah aplikasi yang memberikan informasi mengenai
         pengurusan administrasi bagi mahasiswa Fakultas Teknik Universitas Negeri Yogyakarta</string>
    <string name="versi">Aluradmi V.1.1</string>
    <string name="powered">Powered by :</string>
    <string name="nama">Banu Kusuma </string>
    <string name="nim">12520244039</string>
    <string name="sinkronisasi_pengaturan">Sinkrosisasi setiap : </string>
    <string name="pilih_jurusan_header">Silahkan Pilih Salah Satu Jurusan</string>
    <string name="rate">Berikan Review dan Rating</string>
    <string name="item_bantuan_1_judul">Melihat Alur Administrasi</string>
    <string name="opening_bantuan_singkat">Berikut panduan singkat penggunaan aplikasi Aluradmi</string>
    <string name="ending_bantuan_singkat">Apakah Anda sudah paham?</string>
    <string name="opening_bantuan_lengkap">Berikut adalah daftar bantuan:</string>
    <string name="button_paham">Saya Paham</string>
    <string name="button_tidak_paham">Ulangi Lagi</string>
    <string-array name="bantuan_1">
        <item>Melihat Alur Administrasi</item>
        <item>1. Tekan "Menu Utama"</item>
        <item>2. Tekan "Daftar Administrasi"</item>
        <item>3. Pilih salah satu administrasi</item>
        <item>4. Akan terlihat alur administrasi yang dipilih</item>
    </string-array>
    <string-array name="bantuan_2">
        <item>Melihat Detail Alur Administrasi</item>
        <item>1. Tekan salah satu langkah pada tampilan alur administrasi</item>
        <item>2. Akan terlihat detail langkah administrasi yang telah dipilih</item>
        <item>3. Jika terdapat lebih dari satu detail langkah administrasi seperti gambar dibawah ini,
            geser layar ke kanan untuk melihat detail selanjutnya dan geser layar ke kiri untuk melihat detail sebelumnya</item>
    </string-array>
    <string-array name="bantuan_3">
        <item>Melihat Denah Lokasi</item>
        <item>Tekan gambar denah di bagian "LOKASI" pada tampilan detail langkah administrasi</item>
        <item>*) Denah lokasi hanya terdapat pada detail langkah administrasi tertentu</item>
    </string-array>
    <string-array name="bantuan_4">
        <item>Melihat Rute Menuju Lokasi</item>
        <item>Tekan tombol "TUNJUKKAN RUTE" di bagian "LOKASI" pada tampilan detail langkah administrasi</item>
        <item>1. Tekan "Peta" pada menu utama</item>
        <item>2. Pilih lokasi yang akan di tuju</item>
        <item>3. Tekan "TUNJUKKAN RUTE" pada lokasi yang telah dipilih</item>
        <item>Cara 1:</item>
        <item>Cara 2:</item>
    </string-array>
    <string-array name="bantuan_5">
        <item>Menambah Progress</item>
        <item>1. Tekan salah satu langkah pada tampilan alur administrasi</item>
        <item>2. Tekan checkbox "Selesai" pada tampilan detail langkah administrasi</item>
        <item>*) Checkbox akan muncul jika langkah sebelumnya telah mencapai progress 100%</item>
        <item>3. Progress akan terlihat seperti tampilan di bawah ini.</item>
        <item>4. Jika melakukan pembatalan progress pada langkah administrasi yang telah mencapai 100%, akan muncul peringatan seperti tampilan di bawah ini</item>
    </string-array>
    <string-array name="bantuan_6">
        <item>Mengganti Jurusan</item>
        <item>1. Tekan "Menu Tambahan"</item>
        <item>2. Tekan "Ganti Jurusan"</item>
        <item>3. Pilih salah satu jurusan</item>
        <item>4. Tekan tombol "OK"</item>
    </string-array>
    <string-array name="bantuan_7">
        <item>Melakukan Sinkronisasi Data</item>
        <item>Tekan menu "Sinkronisasi Data"</item>
    </string-array>
    <string-array name="bantuan_8">
        <item>Mencari Langkah Administrasi</item>
        <item>1. Tekan icon "Search"</item>
        <item>2. Masukan nama langkah yang ingin dicari</item>
    </string-array>
    <string-array name="bantuan_9">
        <item>Melakukan Review dan Rating</item>
        <item>1. Tekan "Menu Tambahan"</item>
        <item>2. Tekan "Berikan Review dan Rating"</item>
    </string-array>
    <string name="kritik">Kritik dan Saran:</string>
    <string name="email">Kirim ke banukusuma11@gmail.com</string>
</resources>
