<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_jurusan"
        android:title="@string/action_pilih_jurusan"
        android:orderInCategory="4"
        android:icon="@drawable/ic_account_balance_white_24px"
        app:showAsAction="ifRoom" />
    <item android:title="@string/pengaturan"
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_white_24px"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"/>
    <item
        android:id="@+id/menu_search_main"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:icon="@drawable/ic_search_white_24px"
        android:title="@string/search"
        />
    <item
        android:id="@+id/menu_rate_app"
        app:showAsAction="never"
        android:orderInCategory="5"
        android:title="@string/rate"
        />
    <item android:title="@string/sync"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:id="@+id/menu_sync"
        android:icon="@drawable/ic_sync_white_24dp"/>
    <item android:title="tes pager"
        android:id="@+id/menu_tes"
        android:orderInCategory="5"
        app:showAsAction="never" />
</menu>
