<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_kategori"
            android:icon="@drawable/ic_home_white_24px"
            android:title="@string/kategori" />
        <item
            android:id="@+id/nav_lokasi"
            android:icon="@drawable/ic_location_on_white_24px"
            android:title="@string/lokasi" />
        <item android:title="Info" >
            <menu >
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_bantuan"
                        android:icon="@drawable/ic_help_outline_white_24px"
                        android:title="@string/bantuan" />
                    <item
                        android:id="@+id/nav_about"
                        android:icon="@drawable/ic_info_outline_white_24px"
                        android:title="@string/about" />
                </group>
            </menu>

        </item>
    </group>

</menu>
