<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <ImageView
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/branding_alternatif"
                android:contentDescription="@string/logo"
                android:id="@+id/imageView_logo"
                android:cropToPadding="false"
                android:adjustViewBounds="false"
                android:scaleType="fitXY"
                android:layout_width="152dp"
                android:layout_height="152dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView_logo"
                android:textStyle="bold"
                android:id="@+id/textView4" />

            <TextView
                android:text="@string/penjelasan_aluradmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/penjelasan_text_view"
                android:layout_below="@+id/textView4"
                android:fontFamily="sans-serif"
                android:textSize="13sp" />

            <TextView
                android:text="@string/powered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/penjelasan_text_view"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:id="@+id/textView5" />
            <TextView
                android:text="@string/nama"
                android:layout_below="@id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textSize="13sp" />

            <TextView
                android:text="@string/nim"
                android:layout_below="@id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textSize="13sp" />
        </RelativeLayout>
</ScrollView>