<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/action_pilih_jurusan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textview_header_jurusan"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textAlignment="center" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_jurusan_container"
        android:layout_weight="1">

    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancel"
            android:layout_weight="1" />

        <Button
            android:text="@string/oke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_oke"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>